# competition-registration-system

./: .gitignore  README.md  app.py  app1.py  app2.py  auth_code.py  creat_table_script.sql  creat_table_script1.sql  create_table_script.sql  pyproject.toml  requirements.txt  template.xlsx  test.ipynb  test.py  test.xlsx  test1.py  web1-1.py  web1-2.py  web1.py  web3.py  web4.py  興傳杯.docx
doc/: ERD.pgerd
static/: test
templates/: base.html  home.html  mylogin.html  output1-1.html  output1-2.html  output1.html  output3.html  output4.html  output5.html  output6.html  output7.html  rule.html  schedule.html  show_teams.html  報名表.xlsx
