[tool.poetry]
name = "sport"
version = "0.1.0"
description = ""
authors = ["momonong <morrischen2.9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
captcha = "0.4"
email-validator = "2.0.0.post2"
flask = "2.2.2"
flask-login = "0.6.2"
flask-security = "3.0.0"
flask-sqlalchemy = "3.0.3"
jinja2 = "3.1.2"
jinja2-time = "0.2.0"
openpyxl = "3.0.10"
pandas = "1.5.3"
psycopg2-binary = "2.9.3"
python-dotenv = "1.0.0"
pillow = "9.5.0"
sqlalchemy = "1.4.39"
gunicorn = "20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
